Added swagger Added endpoint for creating and getting requests
