# src/routes/requests.ts
@@ -6,5 +6,6 @@ const router = Router();
 router.post("/", requestController.createRequest);
 router.get("/:id", requestController.getRequestById);
 router.get("/users/:userId", requestController.getRequestsByUserId);
+router.get("/", requestController.getAllRequests);
 
 export const requestRoute = router;
