# src/routes/users.ts
@@ -7,6 +7,6 @@ router.post("/", userController.createUser);
 router.post("/guard", userController.createGuard);
 router.get("/:id", userController.getUser);
 router.get("/guard/:id", userController.getGuard);
-//router.get("/guard", userController.getGuardBySkills);
+router.get("/guard", userController.getGuardBySkills);
 
 export const userRoute = router;
